<resources>
    <string name="app_name">Otlob</string>

    <string name="login">تسجيل الدخول</string>
    <string name="email">البريد الالكتروني</string>
    <string name="password">كلمة السر</string>
    <string name="enter">دخول</string>

    <string name="skip">تخطي</string>

    <string name="new_account">حساب جديد</string>
    <string name="name">الاسم</string>
    <string name="retype_password">اعادة كلمة السر</string>
    <string name="phone">رقم التليفون</string>
    <string name="city">المدينة</string>
    <string name="country">المنطقة</string>
    <string name="create">انشاء</string>
    <string name="have_account">لديك حساب؟</string>
    <string name="not_have_account">ليس لديك حساب؟</string>
    <string name="create_account">انشاء حساب</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">الرئيسية</string>
    <string name="title_map">الخريطة</string>
    <string name="title_profile">البروفايل</string>

    <string name="worker">مقدم خدمة</string>
    <string name="user">طالب خدمة</string>

    <string name="address">العنوان</string>
    <string name="time">الوقت المتاح</string>
    <string name="desc">نبذة مختصرة</string>
    <string name="choose_job">اختر مهنتك</string>

    <string name="suggestions">شكاوى واقتراحات</string>
    <string name="about">عن التطبيق</string>
    <string name="account_setting">اعدادات الحساب</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="save_changes">حفظ التعديلات</string>
    <string name="change_password">تغيير كلمة السر</string>

    <string name="search">ابحث عن خدمة</string>

    <string name="carpenter">نجار</string>
    <string name="send">ارسال</string>
    <string name="done">تم</string>
    <string name="old_password">كلمة السر القديمة</string>
    <string name="new_password">كلمة السر الجديدة</string>

    <string name="rates">تقييمات</string>
    <string name="title_activity_maps">Map</string>
    <string name="about_text">من خلال استخدامك لهذا التطبيق سيمنحك الكثير من المزايا ..
يمكنك الوصول الى افضل واقرب مهني تريده ..
ليس هذا فقط بل ايضا يوفر لك مجهودك ووقتك وبلا اي مقابل مادي
واخيرا يمكنك الاعلان عن نفسك هنا بطريقة سهلة ستمكنك من الانتشار بين الناس.</string>
</resources>
