<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".activities.LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/login"
        android:textColor="@color/colorPrimaryDarker"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_edit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/edit_text"
        android:fontFamily="@font/cairo_light"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:textColor="@color/colorPrimaryDarker"
        android:textColorHint="@color/colorPrimaryDarker"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/message_blue"
        app:layout_constraintBottom_toBottomOf="@+id/email_edit"
        app:layout_constraintEnd_toEndOf="@+id/email_edit"
        app:layout_constraintTop_toTopOf="@+id/email_edit" />

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text"
        android:fontFamily="@font/cairo_light"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:textColor="@color/colorPrimaryDarker"
        android:textColorHint="@color/colorPrimaryDarker"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/email_edit"
        app:layout_constraintStart_toStartOf="@+id/email_edit"
        app:layout_constraintTop_toBottomOf="@+id/email_edit" />

    <ImageView
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/locked"
        app:layout_constraintBottom_toBottomOf="@+id/passwordET"
        app:layout_constraintEnd_toEndOf="@+id/passwordET"
        app:layout_constraintTop_toTopOf="@+id/passwordET" />

    <Button
        android:id="@+id/sign_button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:alpha=".6"
        android:background="@drawable/button_blue"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/enter"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/passwordET"
        app:layout_constraintStart_toStartOf="@+id/passwordET"
        app:layout_constraintTop_toBottomOf="@+id/passwordET" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="180dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/cairo_light"
        android:text="@string/not_have_account"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sign_button"
        app:layout_constraintTop_toBottomOf="@+id/sign_button"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/createAccountTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="180dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/cairo_extralight"
        android:text="@string/create_account"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.864"
        app:layout_constraintStart_toStartOf="@+id/sign_button"
        app:layout_constraintTop_toBottomOf="@+id/sign_button"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
