<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NewAccountWorkerActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_account"
            android:textColor="@color/colorPrimaryDarker"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingEnd="50dp"
            android:paddingStart="50dp"
            android:textColor="@color/colorPrimaryDarker"
            android:textColorHint="@color/colorPrimaryDarker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/user_blue"
            app:layout_constraintBottom_toBottomOf="@+id/editText2"
            app:layout_constraintEnd_toEndOf="@+id/editText2"
            app:layout_constraintTop_toTopOf="@+id/editText2" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text"
            android:gravity="end"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:paddingEnd="50dp"
            android:paddingStart="50dp"
            android:textColor="@color/colorPrimaryDarker"
            android:textColorHint="@color/colorPrimaryDarker"
            app:layout_constraintEnd_toEndOf="@+id/editText2"
            app:layout_constraintStart_toStartOf="@+id/editText2"
            app:layout_constraintTop_toBottomOf="@+id/editText2" />

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/locked"
            app:layout_constraintBottom_toBottomOf="@+id/passwordEditText"
            app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
            app:layout_constraintTop_toTopOf="@+id/passwordEditText" />

        <EditText
            android:id="@+id/retypePasswordEditText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text"
            android:gravity="end"
            android:hint="@string/retype_password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:paddingEnd="50dp"
            android:paddingStart="50dp"
            android:textColor="@color/colorPrimaryDarker"
            android:textColorHint="@color/colorPrimaryDarker"
            app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
            app:layout_constraintStart_toStartOf="@+id/passwordEditText"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/locked"
            app:layout_constraintBottom_toBottomOf="@+id/retypePasswordEditText"
            app:layout_constraintEnd_toEndOf="@+id/retypePasswordEditText"
            app:layout_constraintTop_toTopOf="@+id/retypePasswordEditText" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text"
            android:gravity="end"
            android:hint="@string/phone"
            android:inputType="phone"
            android:padding="12dp"
            android:paddingEnd="50dp"
            android:paddingStart="50dp"
            android:textColor="@color/colorPrimaryDarker"
            android:textColorHint="@color/colorPrimaryDarker"
            app:layout_constraintEnd_toEndOf="@+id/retypePasswordEditText"
            app:layout_constraintStart_toStartOf="@+id/retypePasswordEditText"
            app:layout_constraintTop_toBottomOf="@+id/retypePasswordEditText" />

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/phone_gray"
            app:layout_constraintBottom_toBottomOf="@+id/editText4"
            app:layout_constraintEnd_toEndOf="@+id/editText4"
            app:layout_constraintTop_toTopOf="@+id/editText4" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="55dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text"
            android:hint="@string/city"
            android:inputType="text"
            android:padding="12dp"
            android:paddingEnd="50dp"
            android:paddingStart="50dp"
            android:textColor="@color/colorPrimaryDarker"
            android:textColorHint="@color/colorPrimaryDarker"
            app:layout_constraintEnd_toEndOf="@+id/editText4"
            app:layout_constraintStart_toStartOf="@+id/editText4"
            app:layout_constraintTop_toBottomOf="@+id/editText4" />

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/location_blue"
            app:layout_constraintBottom_toBottomOf="@+id/editText5"
            app:layout_constraintEnd_toEndOf="@+id/editText5"
            app:layout_constraintTop_toTopOf="@+id/editText5" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/circle_blue"
            android:scaleType="fitCenter"
            android:src="@drawable/placeholder_white"
            app:layout_constraintEnd_toStartOf="@+id/editText5"
            app:layout_constraintStart_toStartOf="@+id/editText4"
            app:layout_constraintTop_toBottomOf="@+id/editText4" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text"
            android:hint="@string/country"
            android:inputType="text"
            android:padding="12dp"
            android:paddingEnd="50dp"
            android:paddingStart="50dp"
            android:textColor="@color/colorPrimaryDarker"
            android:textColorHint="@color/colorPrimaryDarker"
            app:layout_constraintEnd_toEndOf="@+id/editText5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText5" />

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/location_blue"
            app:layout_constraintBottom_toBottomOf="@+id/editText6"
            app:layout_constraintEnd_toEndOf="@+id/editText6"
            app:layout_constraintTop_toTopOf="@+id/editText6" />

        <Button
            android:id="@+id/chooseJob"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_yellow"
            android:text="@string/choose_job"
            android:textColor="@color/colorPrimaryDarker"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText6" />

        <Button
            android:id="@+id/button2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_blue"
            android:text="@string/create"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chooseJob" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="92dp"
            android:layout_marginRight="92dp"
            android:layout_marginTop="8dp"
            android:text="@string/have_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/login"
            android:textColor="@color/colorPrimaryDarker"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>