<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".activities.ChangePasswordActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/oldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimaryDarker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:passwordToggleDrawable="@drawable/password_toggle"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/oldPasswordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            android:hint="@string/old_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/newPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimaryDarker"
        app:layout_constraintEnd_toEndOf="@+id/oldPassword"
        app:layout_constraintStart_toStartOf="@+id/oldPassword"
        app:layout_constraintTop_toBottomOf="@+id/oldPassword"
        app:passwordToggleDrawable="@drawable/password_toggle"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/newPasswordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            android:hint="@string/new_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/retypePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimaryDarker"
        app:layout_constraintEnd_toEndOf="@+id/newPassword"
        app:layout_constraintStart_toStartOf="@+id/newPassword"
        app:layout_constraintTop_toBottomOf="@+id/newPassword"
        app:passwordToggleDrawable="@drawable/password_toggle"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/retypePasswordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            android:hint="@string/retype_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/save_changes_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/button_blue"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/save_changes"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/retypePassword" />

</android.support.constraint.ConstraintLayout>