<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AccountSettingActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/worker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/nameET"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text"
            android:fontFamily="@font/cairo_light"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingEnd="50dp"
            android:paddingStart="50dp"
            android:textColor="@color/colorPrimaryDarker"
            android:textColorHint="@color/colorPrimaryDarker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/user_blue"
            app:layout_constraintBottom_toBottomOf="@+id/nameET"
            app:layout_constraintEnd_toEndOf="@+id/nameET"
            app:layout_constraintTop_toTopOf="@+id/nameET" />

        <EditText
            android:id="@+id/emailET"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text"
            android:fontFamily="@font/cairo_light"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingEnd="50dp"
            android:paddingStart="50dp"
            android:textColor="@color/colorPrimaryDarker"
            android:textColorHint="@color/colorPrimaryDarker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameET" />

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/message_blue"
            app:layout_constraintBottom_toBottomOf="@+id/emailET"
            app:layout_constraintEnd_toEndOf="@+id/emailET"
            app:layout_constraintTop_toTopOf="@+id/emailET" />

        <EditText
            android:id="@+id/phoneET"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text"
            android:fontFamily="@font/cairo_light"
            android:gravity="end"
            android:hint="@string/phone"
            android:inputType="phone"
            android:padding="12dp"
            android:paddingEnd="50dp"
            android:paddingStart="50dp"
            android:textColor="@color/colorPrimaryDarker"
            android:textColorHint="@color/colorPrimaryDarker"
            app:layout_constraintEnd_toEndOf="@+id/emailET"
            app:layout_constraintStart_toStartOf="@+id/emailET"
            app:layout_constraintTop_toBottomOf="@+id/emailET" />

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/phone_gray"
            app:layout_constraintBottom_toBottomOf="@+id/phoneET"
            app:layout_constraintEnd_toEndOf="@+id/phoneET"
            app:layout_constraintTop_toTopOf="@+id/phoneET" />

        <EditText
            android:id="@+id/cityET"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="55dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text"
            android:fontFamily="@font/cairo_light"
            android:hint="@string/city"
            android:inputType="text"
            android:padding="12dp"
            android:paddingEnd="50dp"
            android:paddingStart="50dp"
            android:textColor="@color/colorPrimaryDarker"
            android:textColorHint="@color/colorPrimaryDarker"
            app:layout_constraintEnd_toEndOf="@+id/phoneET"
            app:layout_constraintStart_toStartOf="@+id/phoneET"
            app:layout_constraintTop_toBottomOf="@+id/phoneET" />

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/location_blue"
            app:layout_constraintBottom_toBottomOf="@+id/cityET"
            app:layout_constraintEnd_toEndOf="@+id/cityET"
            app:layout_constraintTop_toTopOf="@+id/cityET" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/circle_blue"
            android:scaleType="fitCenter"
            android:src="@drawable/placeholder_white"
            app:layout_constraintEnd_toStartOf="@+id/cityET"
            app:layout_constraintStart_toStartOf="@+id/phoneET"
            app:layout_constraintTop_toBottomOf="@+id/phoneET" />

        <EditText
            android:id="@+id/placeET"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text"
            android:fontFamily="@font/cairo_light"
            android:hint="@string/country"
            android:inputType="text"
            android:padding="12dp"
            android:paddingEnd="50dp"
            android:paddingStart="50dp"
            android:textColor="@color/colorPrimaryDarker"
            android:textColorHint="@color/colorPrimaryDarker"
            app:layout_constraintEnd_toEndOf="@+id/cityET"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityET" />

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/location_blue"
            app:layout_constraintBottom_toBottomOf="@+id/placeET"
            app:layout_constraintEnd_toEndOf="@+id/placeET"
            app:layout_constraintTop_toTopOf="@+id/placeET" />

        <EditText
            android:id="@+id/timeET"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text"
            android:fontFamily="@font/cairo_light"
            android:hint="@string/time"
            android:inputType="time"
            android:padding="12dp"
            android:paddingEnd="50dp"
            android:paddingStart="50dp"
            android:textColorHint="@color/colorPrimaryDarker"
            app:layout_constraintEnd_toEndOf="@+id/placeET"
            app:layout_constraintStart_toStartOf="@+id/placeET"
            app:layout_constraintTop_toBottomOf="@+id/placeET" />

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/clock_gray"
            app:layout_constraintBottom_toBottomOf="@+id/timeET"
            app:layout_constraintEnd_toEndOf="@+id/timeET"
            app:layout_constraintTop_toTopOf="@+id/timeET" />


        <Button
            android:id="@+id/saveBT"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_blue"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/save_changes"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeET" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>